<resources>
    <string name="app_name">Simon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="exit">Go Back</string>
    <string name="score">Score:</string>
    <string name="max_score">High Score:</string>
    <string name="high_scores_table">High Score Table</string>
    <string name="high_scores">High Scores</string>
    <string name="name">Name</string>
    <string name="Scores">Scores</string>
</resources>